...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_question_title" />

        <EditText
            android:id="@+id/question_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Question title"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
...
            android:layout_gravity="start"
            android:contentDescription="@string/latex_button_description"
            app:srcCompat="@drawable/latex_logo"
            app:tint="@color/textColor" />

        <EditText
            android:id="@+id/question_details_edittext"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:autofillHints="Question body"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="5"
            tools:ignore="LabelFor" />

        <!-- Anonymous Switch -->

        <Button
            android:id="@+id/play_note_button"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/ic_microphone"
            android:drawablePadding="8dp"
            android:text="@string/play_voice_note" />


        <Button
            android:id="@+id/voice_note_button"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/ic_microphone"
            android:drawablePadding="8dp"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_content" />

        <TextView
            android:id="@+id/image_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_image_selected_yet" />

        <Button
            android:id="@+id/takeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_new_question"/>

    </LinearLayout>
</ScrollView>
