...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/camera_layout_parent"
    tools:context=".features.camera.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="89dp" />

    <ImageButton
        android:id="@+id/image_capture_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:elevation="2dp"
        android:background="@drawable/camera"
        android:contentDescription="@string/take_photo"
...
