...
    >
    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/nav_home" />

        <item
            android:id="@+id/nav_courses"
            android:title="@string/courses"
...
        <item
            android:id="@+id/nav_my_questions"
            android:title="@string/my_questions"
            android:icon="@drawable/nav_my_questions" />

        <item
            android:id="@+id/nav_saved_questions"
            android:title="@string/saved_questions"
            android:icon="@drawable/nav_saved_questions" />

        <item
            android:id="@+id/nav_chat"
            android:title="@string/chat"
...
